--- a/config.json
+++ b/config.json
@@ -1,1 +1,3 @@
-{"project_root": "/home/stanzu10/Repos/repos2/Bridge/"}
+{
+    "project_root": "/mnt/c/Users/brian.bastanza/source/repos/Bridge/"
+}
